Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107681

lupdate does not find *.ts files

XMLWordPrintable

    • Windows

      CMakeLists.txt:

      set(TS_FILES
          translations/myapp.en_US.ts
      )
      qt_add_translations(appbasis TS_FILES ${TS_FILES})
      

      results in this output:

      Starting external tool "C:\QtCommercial\6.4.0\msvc2019_64\bin\lupdate.exe C:/Users/dev/Desktop/Projects/test/qtvtm/CMakeLists.txt"
      lupdate warning: no TS files specified. Only diagnostics will be produced.
      

      And running lrelease from QtCreator results in this message:

      Starting external tool "C:\QtCommercial\6.4.0\msvc2019_64\bin\lrelease.exe C:/Users/dev/Desktop/Projects/test/qtvtm/CMakeLists.txt"
      lrelease error: Parse error at C:/Users/dev/Desktop/Projects/test/qtvtm/CMakeLists.txt:1:1: Start tag expected.
      

        1. cmake_trace.txt
          977 kB
          Harald Meyer
        2. CMakeCache.txt
          14 kB
          Harald Meyer
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qtbuildsystem Qt Build System Team
            Harald Meyer Harald Meyer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes