lupdate: Print error on attempt to run lupdate on a CMakeLists.txt

Task-number: QTBUG-107681
Change-Id: I46cc9464db450b94bbd975076c3f3aaf411a747c
Reviewed-by: Kai Koehne <kai.koehne@qt.io>